MOSIP-32461 code fix
Signed-off-by: Sowmya Ujjappa Banakar <sowmya.61022006@ltimindtree.com>