@@ -395,6 +395,7 @@
 							--add-opens java.base/sun.security.jca=ALL-UNNAMED
 							--add-opens java.base/sun.security.util=ALL-UNNAMED
 							--add-opens java.base/jdk.internal.util=ALL-UNNAMED
+							--add-opens java.base/java.text=ALL-UNNAMED 
 							--illegal-access=permit
 						</argLine>
 					</configuration>
